[gd_scene load_steps=10 format=3 uid="uid://cxkwh340yug83"]

[ext_resource type="Script" path="res://actor_class.gd" id="1_0wp1f"]
[ext_resource type="Script" path="res://ActorStat/actor_stat.gd" id="2_3fthh"]
[ext_resource type="Script" path="res://upgrade_bundle.gd" id="2_qpbj8"]
[ext_resource type="Script" path="res://item_resource.gd" id="3_ikcj5"]
[ext_resource type="Script" path="res://pickup_effect.gd" id="4_bltet"]
[ext_resource type="Script" path="res://animation_manager.gd" id="4_qpr1k"]
[ext_resource type="Script" path="res://controller.gd" id="5_bjwkw"]

[sub_resource type="Resource" id="Resource_04dm4"]
script = ExtResource("2_3fthh")
is_player = false
terrain_collide = true
can_grab = false
grab_range = 20.0
speed = 25.0
max_hitpoint = 10.0
current_hitpoint = 0.0
hitbox_size = Vector2(13, 7)
display_mode = 0
item_list = Array[ExtResource("3_ikcj5")]([])
available_upgrade_bundle = Array[ExtResource("2_qpbj8")]([])
is_pickup = false
pickup_effect_list = Array[ExtResource("4_bltet")]([])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t8en8"]
resource_local_to_scene = true
size = Vector2(13, 7)

[node name="Actor" type="CharacterBody2D"]
collision_layer = 0
motion_mode = 1
platform_on_leave = 2
script = ExtResource("1_0wp1f")
actor_stat = SubResource("Resource_04dm4")

[node name="AnimationManager" type="Node2D" parent="."]
texture_repeat = 1
position = Vector2(0, -3)
script = ExtResource("4_qpr1k")

[node name="ItemManager" type="Node2D" parent="."]

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_t8en8")
debug_color = Color(0, 0.6, 0, 0.0980392)

[node name="ControlManager" type="Node2D" parent="."]
script = ExtResource("5_bjwkw")

[node name="TextBox" type="Label" parent="."]
z_index = 10
offset_left = 3.0
offset_top = -14.0
offset_right = 43.0
theme_override_font_sizes/font_size = 10
